--- a/test/cryptocurrency-prices-test.html
+++ b/test/cryptocurrency-prices-test.html
@@ -140,11 +140,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<table align="center">		
 		<thead>
 			<tr>
-				<td>Name</td>
-				<td>Market Cap</td>
-				<td>Price</td>
+                <td>Name</td>
+                <td>Price</td>
+                <td>Change, 24H</td>
+				<td>Market cap</td>
 				<td>Volume</td>
-				<td>Change</td>
+				<td>Price Chart</td>
 				<td>Actions</td>
 			</tr>
 		</thead>	
