--- a/token.html
+++ b/token.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <title>Atomic Wallet Token (AWC)</title>
     <meta name="description" content="AWC is the first token issued by decentralized cryptocurrency wallet. It will serve as an internal currency for Atomic Wallet users">
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/token.css">
