--- a/buy-ethereum.html
+++ b/buy-ethereum.html
@@ -759,7 +759,7 @@ $(window).trigger('resize')
             <br>  
             <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/tvpHQLxruvo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/wMRV2WeFFQo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
             <h3>How it works?</h3>
