--- a/buy-ripple.html
+++ b/buy-ripple.html
@@ -766,7 +766,7 @@ $(window).trigger('resize')
                 <li>Receive crypto to your Atomic wallet address. The whole process takes up to 25 minutes, on average.</li>
                 </ol>
                             <div class="item-page-image-template">
-              <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/aY7LoIDA82o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/Qo0TAr-CiVQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <br>
             </div>
