Ticker Space, Get wallet button Height and hover

--- a/header/header.html
+++ b/header/header.html
@@ -36,7 +36,7 @@
         <nav class="header__navigation">
             <ul>
                 <li><a href="#">Wallet</a></li>
-                <li><a href="#">Buy bitcoin</a></li>
+                <li><a href="/atomicwallet.github.io/buy-bitcoin.html">Buy bitcoin</a></li>
                 <li><a href="#">Assets</a></li>
                 <li><a href="#">Token</a></li>
                 <li><a href="#">Support</a></li>
