--- a/test/cryptocurrency-prices-test.html
+++ b/test/cryptocurrency-prices-test.html
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <td>Change, 24H</td>
 				<td>Market cap</td>
 				<td>Volume</td>
-				<td>Price Chart</td>
+				<!--td>Price Chart</td-->
 				<td></td>
 			</tr>
 		</thead>	
