Button download in mobile version

--- a/header/header.html
+++ b/header/header.html
@@ -51,11 +51,11 @@
                     <li><a href="#">Assets</a></li>
                     <li><a href="#">Token</a></li>
                     <li><a href="#">Support</a></li>
-                    <li><div class="btn--download-menu">Download</div></li>
                 </ul>
             </nav>
         
         <div class="btn--download">Download</div>
+        <div class="btn--download-mobile_menu">Download</div>
         <div class="btn--mobile-menu"><i class="fa fa-bars"></i></div>
     </div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
