--- a/cryptocurrency-prices.html
+++ b/cryptocurrency-prices.html
@@ -189,28 +189,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="mailto:support@atomicwallet.io" class="footer-new-email f-light">support@atomicwallet.io</a><br>
                 <div class="footer-new-soc">
                     <a href="https://twitter.com/atomicwallet" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_twitter.svg">
+                        <img src="css/images/top_twitter.svg">
                     </a>
                     <a href="https://t.me/atomicwalletchat" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_telegram.svg">
+                        <img src="css/images/top_telegram.svg">
                     </a>
                     <a href="https://github.com/Atomicwallet" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_github.svg">
+                        <img src="css/images/top_github.svg">
                     </a>
                     <a href="https://medium.com/atomic-wallet" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_medium.svg">
+                        <img src="css/images/top_medium.svg">
                     </a>
                     <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_reddit.svg">
+                        <img src="css/images/top_reddit.svg">
                     </a>
                     <a href="https://www.facebook.com/atomicwallet" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_facebook.svg">
+                        <img src="css/images/top_facebook.svg">
                     </a>
                     <a href="https://steemit.com/@atomicwallet" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_steemit.svg">
+                        <img src="css/images/top_steemit.svg">
                     </a>
                     <a href="https://www.youtube.com/channel/UCLMnUt6BBtA67eic1vRGF3g" target="_blank" rel="nofollow">
-                        <img src="../css/images/top_youtube.svg">
+                        <img src="css/images/top_youtube.svg">
                     </a>
                 </div>
             </div>
