Voting + Listing adjustments

--- a/voting.html
+++ b/voting.html
@@ -112,7 +112,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="flex-container">
       <div class="flex-item-column">
-           <p class="flex-item-p"><span class="">Atomic Wallet started listing campaign. Vote for your coin, send AWC-BNB to the addresses provided below. Winning coins will be integrated with the next release.</span>
+           <p class="flex-item-p"><span class="">Vote for your token to get listed in Atomic! Deposit AWC-BNB to the address below. Winners will be added every new release. <div class="button-token">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN4WOC257NF8IPy5QVYSpxeTwmlt9ktp99lOk99cAAPt2EGA/viewform" target="_blank">Apply new coin for voting</a></div></span>
             <br><br></p>
 </div>
       
@@ -808,7 +809,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h2 class="download-title f-bold" id="download"><br><br><a name="download">Download Atomic Wallet</a></h2>
         <br><h3 class="download-text f-light mobile-hide"> Atomic Wallet is available for all major Operating Systems.<br> <a href="#contacts" class="sign-up-download-link">Subscribe</a> for our updates to know first about updates and new releases.<br><br></h3>
     <h2 class="download-text f-light only-mobile"> Manage your ADA, Bitcoin, Ethereum, XRP, Litecoin, XLM and over 300 tokens in a single interface.<br><br></h2>
-   <p class="download-text mobile-hide">The latest version of the wallet: <a class="sign-up-download-link" href="/downloads">2.2.0</a></p>
+   
     <div class="download mobile-hide">
         <div class="download-item download-item-windows hvr-grow" data-download="windows">
             <a href="https://atomicwallet.io/download/atomicwallet.exe" onclick="window.kol_modal_220933.show()"><img src="../css/images/logo-windows.svg" alt class="download-item-img-color"></a>
