--- a/voting.html
+++ b/voting.html
@@ -1036,7 +1036,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
                                         <div class="footer-new-col">
-                        <div class="footer-new-col-title">Buy CryptoÑurrency</div>
+                        <div class="footer-new-col-title">Buy Cryptocurrency</div>
                         <ul class="f-light">
                             <li><a href="https://atomicwallet.io/buy-bitcoin">Buy Bitcoin (BTC)</a></li>
                             <li><a href="https://atomicwallet.io/buy-litecoin">Buy Litecoin (LTC)</a></li>
