--- a/voting.html
+++ b/voting.html
@@ -113,7 +113,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="flex-container">
       <div class="flex-item-column">
-           <p class="flex-item-p"><span class="">Vote for your token to get listed in Atomic! Deposit AWC-BNB to the address below. Winners will be added every new release. <div class="button-token">
+           <p class="flex-item-p flex-item-p-subtitle"><span class="">Vote for your token to get listed in Atomic! Deposit AWC-BNB to the address below. Winners will be added every new release. <div class="button-token">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN4WOC257NF8IPy5QVYSpxeTwmlt9ktp99lOk99cAAPt2EGA/viewform" target="_blank">Apply new coin for voting</a></div></span>
             <br><br></p>
 </div>
