--- a/membership.html
+++ b/membership.html
@@ -4,14 +4,14 @@
      <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
-    <meta name="twitter:title" content="Join Atomic Wallet Loyalty Programme!">
-    <meta name="twitter:description" content="Atomic invites you to join our loyalty programme. All customers holding a minimum of 1.000 AWC will receive a cashback for using a built-in exchange service. ">
+    <meta name="twitter:title" content="Join Atomic Wallet Membership Program!">
+    <meta name="twitter:description" content="Atomic invites you to join our membership programme. All customers holding a minimum of 1.000 AWC will receive a cashback for using a built-in exchange service. ">
     <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/atomic-cashback.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8">
-    <title>Atomic Wallet Loyalty Programme | Atomic Wallet</title>
-    <meta name="description" content="Atomic invites you to join our loyalty programme. All customers holding a minimum of 1.000 AWC will receive a cashback for using a built-in exchange service.">
+    <title>Atomic Wallet Membership Program | Atomic Wallet</title>
+    <meta name="description" content="Atomic invites you to join our membership programme. All customers holding a minimum of 1.000 AWC will receive a cashback for using a built-in exchange service.">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/test-media.css">
@@ -126,17 +126,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
               </div>
       <h3 class="flex-item-p">Introduction</h3>
-      <p class="flex-item-p">Atomic is the first wallet started a cashback based on its native token called AWC. All customers holding a minimum of 1.000 AWC will receive a cashback for using a built-in exchange service.  For each exchange operation, you will receive a reward depending on the amount of AWC you hold.</p>
+      <p class="flex-item-p">Atomic is the first decentralized wallet started a cash back based on its native token AWC. All customers holding AWC will receive rewards for using a built-in exchange service. <br><br> You can read about token <a href="https://atomicwallet.io/token" target="_blank">here</a>. More use cases are coming soon. Please note, we can change conditions anytime. Membership program is related to AWC holders on Binance Chain only.</p>
       <br>
       <div class="details"> 
-    <h1 class="f2-title features-title f-bold">Status</h1>
+    <h1 class="f2-title features-title f-bold">Membership Status</h1>
     <div class="details__container">
         <div class="details__container--feature">
             <div class="item-feature">
             <div class="details__container--feature__icon">
                 <div><img src="css/images/icons/blue-plan.svg">
                 </div>
-                <span class="bronze--text">Bronze</span>
+                <span class="bronze--text">Blue</span>
             </div>
 
             <div class="details__container--feature__info">
@@ -192,9 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
     </div><br>
-      <h3 class="flex-item-p">Why Cashback?</h3>
-    <p class="flex-item-p">The programme incentivize new users to become AWC holders and gain mass adoption on the cryptocurrency wallet market.
- </p></div>
+      </div>
 </div>
 </div>
 
@@ -204,28 +202,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         <div class="item-page-article">
-          <h1 class="f2-title features-title f-bold">How to Participate</h1>
 
         </div>
       </div>
     </div>
 
 <section class="flex" id="buy">
+          <h1 class="f2-title features-title f-bold">How to Participate</h1>
   <div class="flex-container">
 
     <div class="flex-item">
   <ol>
-    <li data-number="1"><h4>Deposit AWC to Atomic</h4>
-      <p>Minimum requirement is 1,000 AWC.</p></li>
-    <li data-number="2"><h4>Start an Exchange</h4>
-    <p>Your cashback will be counted based on your BEP2-AWC balance.</p></li>
-    <li data-number="3"><h4>Receive AWC</h4>
-      <p>Rewards will be distributed on a monthly basis. <br>Hold more AWC to increase your profit.
-</p></li><a href="https://www.binance.org/en/trade/AWC-986_BNB" target="_blank"><div class="btn--download-2">Buy AWC</div></a>
+    <li data-number="1"><h4>Buy and hold AWC in Atomic</h4>
+      <p>Minimum requirement is 1,000 AWC. Buy AWC in Atomic or on <a href="https://www.binance.org/en/trade/AWC-986_BNB" target="_blank">Binance Dex</a>.</p></li>
+    <li data-number="2"><h4>Exchange any assets</h4>
+    <p>Your cash back will be counted based on your AWC-BNB balance.</p></li>
+    <li data-number="3"><h4>Receive Cashback</h4>
+      <p>Rewards will be distributed on a monthly basis. Hold more AWC to upgrade your membership!
+</p></li><a href="https://www.binance.org/en/trade/AWC-986_BNB" target="_blank"></a>
   </ol>
   </div>
   <div class="flex-item">
-    <img src="css/images/mainnotebook.png" class="mobile-hide" alt="">
+    <img src="css/images/articles/membership.png" class="mobile-hide" alt="">
     </div>
 
   </div>
