--- a/token.html
+++ b/token.html
@@ -247,9 +247,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="token">
 
-  <h2 class="token-title f-bold">White Paper</h2>
+  <h2 class="token-title f-bold">About Atomic</h2>
     <div class="flex-container column item-p">
-      <p class="flex-item-p item-p">Atomic is non custodial decentralized wallet to manage, exchange and buy 300+ cryptos in a single interface. The first one wallet, implemented cross chain Atomic Swaps!</p><div class="button-token">
+      <p class="flex-item-p item-p">Atomic is noncustodial decentralized wallet that supports over 20 blockchains and 500+ tokens. Founded in early 2018 by <a href="https://twitter.com/gladkos" target="_blank">Konstantin Gladych</a>, former CEO of Changelly, an instant exchange platform. <br><br>Atomic wallet has grown from scratch to over 150.000 users and become profitable in only 6 months, despite the bear market. It is one of the pioneering companies, which implement cross-chain Atomic Swaps.
+</p><div class="button-token">
       <a href="https://atomicwallet.io/download/atomicwallet-whitepaper.pdf">Download White Paper</a></div>
   </div>
   </section>
