--- a/trading-competition.html
+++ b/trading-competition.html
@@ -156,27 +156,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                </ul>
                <h3>Weekly Bonus Rewards Distribution</h3>
                <ul>
-                 <li>Total weekly rewards are limited to 25,000 AWC for the whole campaign.</li>
+                 <li>Total weekly rewards are limited to 65,000 AWC for the whole campaign.</li>
                  <li>Weekly bonus is calculated for the trading winners during each week started on 0.00 AM (UTC) Thursday till 0.00 AM (UTC) Friday next week.</li>
-                 <li>Bonuses will be paid until Saturday each week after 1,2,3 and 4th competition weeks.</li>
-                 <li><b>Each week is paid of 6,250 AWC among the Top-10 traders:</b></li>
+                 <li>Bonuses will be paid until Saturday each week.</li>
+                 <li><b>Each week is paid of 13,000 AWC among the Top-10 traders:</b></li>
                  <ul>
                    <li>Top1 trader will get 2,500 AWC</li>
-                   <li>Top2 trader will get 1,250 AWC</li>
-                   <li>Top3 trader will get 750 AWC</li>
-                   <li>Each one Top4-Top10 trader will get 250 AWC</li>
-                 </ul>
-               </ul>
-               <h3>Monthly Bonus Rewards Distribution</h3>
-               <ul>
-                 <li>Total monthly rewards are limited to 25,000 AWC for the whole campaign.</li>
-                 <li>Monthly bonus is calculated for the trading winners during the whole competition starts from 2019/06/20 0:00 AM (UTC) to 2019/07/25 0:00 AM (UTC).</li>
-                 <li>Bonuses will be paid around 2019/07/28.</li>
-                 <li><b>At the end of competition we will reward TOP traders for the whole period:</b></li>
-                 <ul>
-                   <li>Top1 trader will get 10,000 AWC</li>
-                   <li>Top2 trader will get 5,000 AWC</li>
-                   <li>Top3 trader will get 3,000 AWC</li>
+                   <li>Top2 trader will get 2,000 AWC</li>
+                   <li>Top3 trader will get 1,500 AWC</li>
                    <li>Each one Top4-Top10 trader will get 1,000 AWC</li>
                  </ul>
                </ul>
