--- a/cryptocurrency-prices.html
+++ b/cryptocurrency-prices.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <main class="main">
     <div class=" relative">
         <h1 class="main-title f-bold">Atomic Wallet Cryptocurrencies List</h1>
-        <h3 class="main-subtitle">We support any ERC20 and BEP2 tokens. Just deposit asset to ETH or BNB address.<span class="mobile-hide"><br>To add new asset in the default list with custom icon, please <a href="https://atomicwallet.io/voting" target="_blank">vote here</a></span></h3>
+        <h3 class="main-subtitle">We support any ERC20 and BEP2 tokens.<span class="mobile-hide"><br>To add new asset in the default list with custom icon, please <a href="https://atomicwallet.io/voting" target="_blank">vote here</a></span></h3>
         <div class="search-container">
             <div class="search-block"> 
                 <div class="input-wrapper"><input type="text" placeholder="Search" id="search"><i class="fa fa-search"></i></div>
