Edit listing campaign test page

--- a/header/header.html
+++ b/header/header.html
@@ -1,4 +1,6 @@
-
+<!DOCTYPE html>
+<html <?php language_attributes(); ?>>
+<head>
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/header.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,7 +60,9 @@
         <div class="btn--download-mobile_menu">Download</div>
         <div class="btn--mobile-menu"><i class="fa fa-bars"></i></div>
     </div>
+	
+	
 	<script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/scroll.js"></script>'
+    <script src="../js/scroll.js"></script>
     
     
