--- a/test/listing-campaign-test.html
+++ b/test/listing-campaign-test.html
@@ -978,14 +978,18 @@ function copyStringToClipboard (str) {
 
 </footer>
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery.touchSwipe.js"></script>
-<script src="js/app.js"></script>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/jquery.touchSwipe.js"></script>
+<script src="../js/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 <script type="text/javascript">
   new ClipboardJS('.btn');
 </script>
+
+
 <script>
+
+  
 const URL_BALANCE = 'listing-campaign'
   class getUSDTBalance {
     constructor() {
