--- a/token.html
+++ b/token.html
@@ -106,8 +106,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container-relative">
     <section class="">
     <h2 class="title-token f-bold" style="padding-bottom: 40px;">Atomic Wallet Token (AWC)</span></h2>
-    <a href="https://atomicwallet.io/trading-competition" target="_blank"><img src="css/images/articles/awc-trading-competition-banner.png" class="trading-banner"></a>
-
     <div class="flex-container">
       <div class="flex-item">
         <div class="flex-item-header">
@@ -158,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </main>
 
 <section class="token">
-   <h2 class="token-title f-bold">AWC Token Emission</h2>
+   <h2 class="token-title f-bold">AWC Token Supply</h2>
 
   <div class="flex-container column">
     <div class="flex-item-column col-item">
