--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="item-page-download">
 
             <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.3.2</h4>
+            <h4 class="mobile-hide">Latest release 2.3.2 <br>Please note, to upgrade your v1.XX wallet to the v2.XX version, you should restore the wallet with 12-word seed backup.</h4>
+            
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
 <script>window.$kol_jquery = window.jQuery</script>
