--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="item-page-download">
 
             <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.3.2 <br>Please note, to upgrade your v1.XX wallet to the v2.XX version, you should restore the wallet with 12-word seed backup.</h4>
+            <h4 class="mobile-hide">Latest release 2.4.0 <br>Please note, to upgrade your v1.XX wallet to the v2.XX version, you should restore the wallet with 12-word seed backup.</h4>
             
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
@@ -237,7 +237,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               we noted your suggestions carefully in order to take another step towards perfection.</p></div>
 
 
-               <div class="releases">
+         <div class="releases">
+            <h4>Desktop Release 2.4.0</h4>
+            <h5>26/07/2019</h5>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>New Features:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>Added Membership Program with cashback for exchange.</li>
+                <li>Now you can buy AWC-BNB through the wallet interface.</li>
+                <li>Saved exchange history while restoring the wallet with mnemonic.</li>
+              </ol>
+            <div class="footer-new-left">
+              <div class="footer-new-left">
+                <h4>Bug fixes:</h4>
+              </div>
+            </div>
+            <ol>
+                <li>VTHO, VET, ADA sending fixed.</li>
+                <li>Fixed bug with missing USDT-TRC20 token balance.</li>
+                <li>Creating EOS account bug fixed.</li>
+              </ol>
+           </div>   
+
+
+
+          <div class="releases">
             <h4>Desktop Release 2.3.2</h4>
             <h5>10/07/2019</h5>
             <div class="footer-new-left">
