--- a/downloads.html
+++ b/downloads.html
@@ -292,6 +292,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>BTC balance fixed (if Bench32 address occurred in tx history).</li>
                 <li>ATOM private key format updated.</li>
               </ol>
+            
+             <div class="footer-new-left">
+               <h4>Download:</h4>
+               </div>
+            
+              <ol>
+                  <li><a href="https://atomicwallet.io/download/atomicwallet-2.32.2.exe">Windows</a></li>
+                  <li><a href="https://atomicwallet.io/download/atomicwallet-2.32.2.dmg">MacOS</a></li>
+                  <li><a href="https://atomicwallet.io/download/atomicwallet-2.32.2.AppImage">Ubuntu</a></li>
+                  <li><a href="https://atomicwallet.io/download/atomicwallet-2.32.2.deb">Debian</a></li>
+                  <li><a href="https://atomicwallet.io/download/atomicwallet-2.32.2.rpm">Fedora</a></li>
+                </ol>
+            </div>
            </div>   
 
 
