Added file ama-report

--- a/blockchain-regulation.html
+++ b/blockchain-regulation.html
@@ -304,6 +304,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div>
 
+</div>
+
 <footer class="footer-new">
     <div class="container relative">
         <div class="footer-row">
