Added all files

--- a/tezos-staking.html
+++ b/tezos-staking.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script src='https://kickoffpages-kickofflabs.netdna-ssl.com/w/113350/223800.js'></script>
 <!-- End of mobile download Pop-up-->
 
-              <div class="download">
+              <div class="download" style="box-shadow:none;">
                   <div class="download-item download-item-windows hvr-grow" data-download="windows">
                       <a href="https://atomicwallet.io/download/atomicwallet.exe" onclick="window.kol_modal_220933.show()"><img src="css/images/logo-windows.svg" alt="" class="download-item-img-color"></a>
                       <img src="css/images/logo-windows-color.svg" alt="" class="download-item-img">
@@ -184,8 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
       <div class="only-mobile">
       <span class="download-text f-light only-mobile"> Manage your Bitcoin, Ethereum, XRP, Litecoin, XLM and over 300 other coins and tokens.</span></div>
-     <div class="mobile-download-button" style="background:white;margin-top:-10px;
-     border-bottom-right-radius:16px;border-bottom-left-radius:16px;">
+     <div class="mobile-download-button">
           <div class="download-item-app hvr-grow" data-download="android">
           <a href="https://play.google.com/store/apps/details?id=io.atomicwallet&referrer=utm_source%3Dwebsite" target="_blank" ga('send',="" {="" hittype:="" 'event',="" eventcategory:="" 'download',="" eventaction:="" eventlabel:="" 'android'="" });=""><!-- <img src="css/images/OS/googleplay.svg" width="80%" alt class="download-item-img-color"> -->
           <img src="css/images/OS/googleplay.svg" width="80%" alt class="download-item-img"></a>
