--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="item-page-download">
 
             <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.4.0 <br>Please note, in case of upgrade v1.XX wallet to the v2.XX version, <br> you should restore the wallet with 12-word seed backup.</h4>
+            <h4 class="mobile-hide">Latest release 2.4.0 <br>Please note, in case of upgrade v1.39.1 wallet to the v2.4.0 version, <br> you should restore the wallet with 12-word seed backup.</h4>
             
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
