--- a/thorchain-bepswap-ama.html
+++ b/thorchain-bepswap-ama.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
             <div class="item-page-article ama-report">
     
-              <h1 style="margin-bottom: 10px;">About Blockchain Regulation</h1>
+              <h1 style="margin-bottom: 10px;">LTO Network AMA</h1>
                 <div class="title-image"></div>
 
                 <p>On July 18, we had an AMA session with <a href="https://lto.network/index.html">LTO Network</a> in our <a href="https://t.me/atomicwalletchat?source=post_page---------------------------">Telegram Chat</a>. 
