--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta property="og:description" content="Manage your Bitcoin, Ethereum, XRP, Litecoin, Stellar and over 300 tokens in Atomic secure wallet interface. Exchange and buy crypto for USD with credit card."/>
     <meta property="og:image" content="https://atomicwallet.io/apple-touch-icon.png"/>
     <meta property="og:url" content="https://atomicwallet.io" />
+    <!-- TrustBox script --> <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -31,6 +32,7 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBC3CH8');</script>
+    <!-- TrustBox script --> <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
     <!-- End Google Tag Manager -->
 
 
@@ -127,6 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </h1>
             <div class="mobile-hide">
         <div alt class="main-notebook-test" data-aos="fade-left" data-aos-duration="800"><a href="#download"> 
+         <div class="trustpilot-widget" data-locale="en-US" style="top:420px;"data-template-id="5419b732fbfb950b10de65e5" data-businessunit-id="5b11644f3e11e200014a1efe" data-style-height="24px" data-style-width="100%" data-theme="light"> <a href="https://www.trustpilot.com/review/atomicwallet.io" target="_blank" rel="noopener">Trustpilot</a> </div>
         </div></a>
       </div>
 
