--- a/litecoin-halving.html
+++ b/litecoin-halving.html
@@ -119,6 +119,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                   <h4>Next Litecoin Halving is about to happen 05 Aug 2019 at 12:17:38</h4>
 
+
+                  <div data-type="countdown" data-id="1345877" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%">
+                    <a href="//www.tickcounter.com/countdown/1345877/my-countdown" title="Litecoin Halving">My countdown</a>
+                    <a href="//www.tickcounter.com/" title="Countdown">Litecoin Halving Countdown</a>
+                </div>
+                
                   <p>The same BTC is steadily rising in price after production cuts. Why this happens – no one will say with 100% certainty. The most common theory is that halving reduces the supply of a cryptocurrency, and demand is growing or remains at the same level as it pushes the price of the asset up.</p>
 
                   <p>At the same time, halving hits miners most of all, because, in the end, their incomes suffer. For example, before halving in 2015, the capacity of the LTC system collapsed by 15%. This can be explained by the fact that some miners have switched to mining a more profitable cryptocurrency. But the "outcome" was quite uncritical for Litecoin.  </p>
@@ -251,6 +257,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script src="js/jquery.touchSwipe.js"></script>
 <script src="js/app.js"></script>
 <script src="js/scroll.js"></script>
+<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+
 
 <script> (function() { var v = document.getElementsByClassName("youtube-player"); for (var n = 0; n < v.length; n++) { v[n].onclick = function () { var iframe = document.createElement("iframe"); iframe.setAttribute("src", "//www.youtube.com/embed/" + this.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&rel="+ this.dataset.related +"&controls="+this.dataset.control+"&showinfo=" + this.dataset.info); iframe.setAttribute("frameborder", "0"); iframe.setAttribute("id", "youtube-iframe"); iframe.setAttribute("style", "width: 100%; height: 100%; position: absolute; top: 0; left: 0;"); if (this.dataset.fullscreen == 1){ iframe.setAttribute("allowfullscreen", ""); } while (this.firstChild) { this.removeChild(this.firstChild); } this.appendChild(iframe); }; } })(); </script>
 <!-- TrustBox script --> <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
