fixed trustpilot widget

--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             </h1>
             <div class="mobile-hide">
-        <div alt class="main-notebook-test" data-aos="fade-left" data-aos-duration="800"><a href="#download"> 
-         <div class="trustpilot-widget" data-locale="en-US" style="top:420px;"data-template-id="5419b732fbfb950b10de65e5" data-businessunit-id="5b11644f3e11e200014a1efe" data-style-height="24px" data-style-width="100%" data-theme="light"> <a href="https://www.trustpilot.com/review/atomicwallet.io" target="_blank" rel="noopener">Trustpilot</a> </div>
-        </div></a>
+        <div alt class="main-notebook-test" data-aos="fade-left" data-aos-duration="800"><a href="#download"></a>
+            <div class="trustpilot-widget" data-locale="en-US" style="right:0;top:420px;z-index:9999;"data-template-id="5419b732fbfb950b10de65e5" data-businessunit-id="5b11644f3e11e200014a1efe" data-style-height="24px" data-style-width="100%" data-theme="light"> <a href="https://www.trustpilot.com/review/atomicwallet.io" target="_blank" rel="noopener">Trustpilot</a> </div>
+        </div>
+         
       </div>
 
 
