--- a/litecoin-halving.html
+++ b/litecoin-halving.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
                   <div data-type="countdown" data-id="1347652" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%;margin-top:50px">
-                    <a href="//www.tickcounter.com/countdown/1347652/coutdown" title="Coutdown">Coutdown</a>
+                    <a href="//www.tickcounter.com/countdown/1347652/coutdown" title="Coutdown">Countdown</a>
                     <a href="//www.tickcounter.com/" title="Countdown">Countdown</a>
                 </div>
                 
