--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBC3CH8');</script>
+    <script src="js/trustpilot.js"></script>
     <!-- TrustBox script --> <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
     <!-- End Google Tag Manager -->
+    <!--script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
 
 
     <!-- Global site tag (gtag.js) - Google Analytics
@@ -59,7 +61,6 @@
 
 </head>
 <body>
-
 
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBC3CH8"
@@ -1289,8 +1290,7 @@ In addition to being a decentralized wallet AW gives you the ability to do token
 </footer>
 
 <script> (function() { var v = document.getElementsByClassName("youtube-player"); for (var n = 0; n < v.length; n++) { v[n].onclick = function () { var iframe = document.createElement("iframe"); iframe.setAttribute("src", "//www.youtube.com/embed/" + this.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&rel="+ this.dataset.related +"&controls="+this.dataset.control+"&showinfo=" + this.dataset.info); iframe.setAttribute("frameborder", "0"); iframe.setAttribute("id", "youtube-iframe"); iframe.setAttribute("style", "width: 100%; height: 100%; position: absolute; top: 0; left: 0;"); if (this.dataset.fullscreen == 1){ iframe.setAttribute("allowfullscreen", ""); } while (this.firstChild) { this.removeChild(this.firstChild); } this.appendChild(iframe); }; } })(); </script>
-<!-- TrustBox script --> <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script> <!-- End TrustBox script -->
-<script src="js/app.js"></script>
+<!-- TrustBox script --> <script src="js/app.js"></script>
 <script src="js/scroll.js"></script>
 <script src="js/scroll.js"></script>
 
@@ -1301,6 +1301,10 @@ In addition to being a decentralized wallet AW gives you the ability to do token
 <script>
 $(function(){
 $('.trustpilot-widget').show();
+
+
+
+console.log($('.trustpilot-iframe'));
 })
 
 </script>
