--- a/airdrop.html
+++ b/airdrop.html
@@ -317,7 +317,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <br><br>
         <div class="item-page-article no-background">
            <h2 class="f2-title f-bold">Airdrop rules</h2>
-            <p>We reward 10 AWC for registration + 5 additional AWC for each other referral user. To get AWC tokens, you should have 0.1 ETH or 50 AWC on your Atomic Wallet address at the snapshot moment. <br>
+            <p>We reward 10 AWC for registration + 5 additional AWC for each other referral user. To get AWC tokens, you should have 1 BNB or 50 AWC on your Atomic Wallet address at the snapshot moment. <br>
               Learn more about AWC: <a href="https://atomicwallet.io/token">https://atomicwallet.io/token</a></p>
             <h3 id="buy-bitcoin">Snapshot details</h3>
             <p>The snapshot takes place on the first day of each month at 12.00.00 am UTC. You shouldn’t move your funds from Atomic wallet until the snapshot will be done. </p>
