Test banners for price-prediction pages

--- a/litecoin-price-prediction.html
+++ b/litecoin-price-prediction.html
@@ -146,19 +146,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <p>At the beginning, the way of Litecoin mining was perfectly simple, because the blocks were easier to proceed then the Bitcoin blocks. Home PC was enough for Litecoin mining, these conditions were perfect for users, it attracts a lot of interest to Litecoin and at the beginning of 2017 Litecoin was named as digital silver.</p>
                  <h2 class="center">Exchange Litecoin (LTC)</h2>
-<script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=ltc&link_id=af2fc093c6dc40&to=btc" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe>
-        <div id="wallet-button" class="center">
-            <div class="buy-coin-item-features buy-coin-item-features-top">
-              <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/buy-litecoin">
-      Buy Litecoin</a>
-    </div>
-              <div class="buy-coin-button">
-    <a href="#download">
-      Get Wallet</a>
-    </div>
-          </div>
-        </div>
+                 <p>Exchange Litecoin (LTC) at the best available rate with no registration and zero fees.</p>
+               <div class="item-page-image-template">
+                <div class="item-page-blog-image">
+                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
+                    <img src="css/images/exchange-litecoin.png" alt="" class="exchange-banner" style="">
+                    </a>
+                    </div>
+                </div>
+<!-- <script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=ltc&link_id=af2fc093c6dc40&to=btc" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe> -->
+ 
         <h3 class="center"><br>Litecoin (LTC) price today</h3>
         <div class="widget-price">
 <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
