--- a/ethereum-price-prediction.html
+++ b/ethereum-price-prediction.html
@@ -156,16 +156,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
               <h2 class="center">Exchange Ethereum</h2>
-<script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=eth&link_id=af2fc093c6dc40&to=xrp" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe>
-              <div id="wallet-button" class="center">
-              <div class="buy-coin-item-features buy-coin-item-features-top">
-              <div class="buy-coin-button">
-              <a href="https://atomicwallet.io/buy-ethereum">Buy Ethereum</a></div>
-              <div class="buy-coin-button">
-              <a href="#download">Get Wallet</a></div>
-          </div>
-        </div>
-        <br>
+              <p>Exchange Ethereum at the best available rate with no registration and zero fees.</p>
+               <div class="item-page-image-template">
+                <div class="item-page-blog-image">
+                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
+                    <img src="css/images/exchange-ethereum.png" alt="" class="exchange-banner" style="">
+                    </a>
+                    </div>
+                </div>
+                <br>
+<!-- <script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=eth&link_id=af2fc093c6dc40&to=xrp" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe> -->
+             
 
               </div>
             </div>
@@ -290,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p>You can <a href="https://atomicwallet.io/buy-ethereum">buy ETH with a credit card</a> in Atomic Wallet. It’s the fastest and legal way to buy Ethereum with VISA or Mastercard, you’ll get ETH already in 30 minutes although usually, it takes a lot of time to process the bank data and proceed the transaction.</p>
               <div class="item-page-image-template mobile-hide">
                 <div class="item-page-blog-image">
-                    <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/tvpHQLxruvo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe width="560" height="315" class="youtube-video "src="https://www.youtube.com/embed/wMRV2WeFFQo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
             <cite style="max-width: 700px; margin: 0 auto;">The arcticle has an informative purpose. The Atomic Wallet team is not trying to persuade or endorse you, neither are we making warranties for the accuracy of the content. All decisions are made at your own risk.</cite>
