--- a/ripple-price-prediction.html
+++ b/ripple-price-prediction.html
@@ -148,26 +148,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
                 <p>The growth of the XRP price had the place till 5-6 January 2018. After that, The XRP price went down. On March 30, 2018, the price of Ripple is 0.51$.</p>
 <h2 class="center">Exchange Ripple (XRP)</h2>
-<script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=xrp&link_id=af2fc093c6dc40&to=btc" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe>
-<section>         <div id="wallet-button" class="center">
-            <div class="buy-coin-item-features buy-coin-item-features-top">
-              <div class="buy-coin-button">
-    <a href="https://atomicwallet.io/buy-ripple">
-      Buy Ripple</a>
-    </div>
-              <div class="buy-coin-button">
-    <a href="#download">
-      Get Wallet</a>
-    </div>
-          </div>
-        </div>
-            <h2 class="center">Ripple Price today: XRP Value, Supply and Market Cap</h2>
-            <div class="widget-price">
-<script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
-<coingecko-coin-ticker-widget coin-id="ripple" currency="usd" locale="en"></coingecko-coin-ticker-widget>
-</div>
-</section>
-<br><br>
+<p>Exchange Ripple (XRP) at the best available rate with no registration and zero fees.</p>
+               <div class="item-page-image-template">
+                <div class="item-page-blog-image">
+                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
+                    <img src="css/images/exchange-ripple.png" alt="" class="exchange-banner" style="">
+                    </a>
+                    </div>
+                </div>
+<!-- <script type="text/javascript" src="https://changenow.io/dist/popup-widget.v1.js"></script><iframe class="widget-now" src="https://changenow.io/embeds/exchange-widget/v1?amount=1&from=xrp&link_id=af2fc093c6dc40&to=btc" frameborder="0" scrolling="no" style="overflow-y: hidden;">Can't load widget</iframe> -->
+
+<br>
 </div>
 </div>
 </div>
