Token added Buy AWC buttons

--- a/token.html
+++ b/token.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="flex-container column">
     <div class="flex-item-column col-item">
-  <h3 class="only-mobile">Emission:</h3>
+  <h3 class="only-mobile">Supply:</h3>
   <div class="flex-item-col-item">
     <p>Total Supply</p>
     <p class="token-information">100.000.000</p>
@@ -196,6 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
                  <div class="flex-item-body-row">
           <p class="token-information-small">*50M ERC20 were burned and transferred to address that has no private key to <a class="flex-item-p-link" href="https://etherscan.io/token/0xad22f63404f7305e4713ccbd4f296f34770513f4?a=0x0000000000000000000000000000000000000001" target="_blank">extract funds</a>. </p>
+    <a href="https://idex.market/eth/awc" target="_blank"><div class="btn--download">Buy AWC</div></a>
          </div>
       </div>
       <div class="flex-item-column">
@@ -209,11 +210,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="flex-item-col-item col-item-token">
     <p>Total Supply</p>
     <p class="token-information">50.000.000</p>
-  </div><div class="flex-item-col-item col-item-token">
+  </div>
+  <div class="flex-item-col-item col-item-token">
     <p>BEP2</p>
     <p class=""><a class="flex-item-p-link" href="https://explorer.binance.org/asset/AWC-986" target="_blank">AWC-986</a></p>
   </div>
+        <a href="https://www.binance.org/en/trade/AWC-986_BNB" target="_blank"><div class="btn--download" style="margin-left: -13px;">Buy AWC</div></a>
         </div>
+                
+             
       </div>
   <p class="flex-item-p item-p">1. Around 5.500.000 AWC are currently distributed among retail investors, advisors and airdrop/bounty hunters. 70% of these tokens belong to over 30.000 small holders. <br>
    <br> 2. No more than 4.500.000 AWC will be distributed during the next 12 months for Airdrop, Affilate rewards and Market Making.
